--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 .header-link:hover,
-.header-link:active {
+.header-link:focus {
   color: #404bbf;
 }
 
@@ -41,7 +41,7 @@ body {
 }
 
 .address-link:hover,
-.address-link:active {
+.address-link:focus {
   color: #404bbf;
 }
 
@@ -68,7 +68,7 @@ body {
 }
 
 .hero-button:hover,
-.hero-button:active {
+.hero-button:focus {
   background-color: #404bbf;
 }
 
