--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,19 @@ body {
   background-color: #ffffff;
 }
 
+ul {
+  list-style-type: none;
+}
+
+.title {
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #2e2f42;
+}
+
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -88,15 +101,6 @@ body {
 
 .team {
   background-color: #f4f4fd;
-}
-
-.team-title {
-  font-size: 36px;
-  line-height: 1.11;
-  text-align: center;
-  letter-spacing: 0.02em;
-  text-transform: capitalize;
-  color: #2e2f42;
 }
 
 .member {
